# shoprite-receipt-reader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: pdf_scraper.py
src/tests/: test_master.py  test_scrape_pdf.py
src/tests/test_data/: master.csv  new_master.csv  new_master.csv.bak
