[tool.poetry]
name = "shoprite-receipt-reader"
version = "0.1.0"
description = ""
authors = ["Jayson Dorsett <ja_dorsett@jdorsett.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shoprite_receipt_reader"}]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
